@@ -25,6 +25,8 @@ JUnit Plafform 1.6 (https://junit.org/junit5/docs/5.6.0/release-notes/index.html
 
 - Upgrade JUnit 4 to 4.13
 
+- A sequence of two or more underscores can be used to separate multiple data tables in one `where` block.
+
 == 2.0-M2 (2020-02-10)
 
 === Groovy-3.0 Support
